@@ -1,5 +1,13 @@
 2008-03-31  Alexander Larsson  <alexl@redhat.com>
 
+        * glocalfileenumerator.c:
+	Read readdir() info chunks (of 1000) and sort
+	the chunks by inode before stat:ing.
+	This is a 20% performance increase in testing
+	gvfs-ls on /usr/bin with cold cache.
+
+2008-03-31  Alexander Larsson  <alexl@redhat.com>
+
         * gmemoryoutputstream.c:
 	Clarify docs for g_memory_output_stream_get_size.
 	Add g_memory_output_stream_get_data_size.
